correction default.vue et ajout trailer sur films

--- a/assets/css/tailwind.css
+++ b/assets/css/tailwind.css
@@ -16,7 +16,7 @@
   --color-primary: #c53030;
   --color-secondary: #0e2233;
   --color-button: #edf2f7;
-  --bg: #e2e8f0;
+  --bg: #fff;
   --bg-secondary: #fff;
   --border-color: #ddd;
   --color-tag: #f9af3e;
